# GEOBench-VLM

./: .env.example  .gitignore  Makefile  README.md  eval.md  pyproject.toml
eval_geobenchvlm/: internvl_cls_single.py  lfm_cls_single.py  llava1pt5_cls_single.py  llava1pt6_cls_single.py  llava_next_compat.py  llavaone1_cls_single.py  qwen_cls_single.py  runmodel.py  score_results.py
eval_geobenchvlm/temporal/: llavaone1_cls_temporal.py  qwen_cls_temporal.py
geobench_vlm/: run_inspect.py  run_single.py  run_temporal.py
geobench_vlm/datasets/: __init__.py  dataset.py
geobench_vlm/models/: __init__.py  base.py  internvl.py  lfm.py  llava.py  llavaone1.py  qwen.py  registry.py
geobench_vlm/utils/: __init__.py  prompts.py  results.py  runner.py  runtime.py  scoring.py  transformers_compat.py
notebooks/: download_dataset.ipynb  eval_lfm.ipynb  eval_llavaone1.ipynb  eval_qwen.ipynb  score_results.ipynb
scripts/: download_dataset.sh  eval_internvl.sh  eval_lfm.sh  eval_llava1pt5.sh  eval_llava1pt6.sh  eval_llavaone1.sh  eval_qwen.sh  inspect_lfm.sh  inspect_qwen.sh  install_lfm.sh  install_llavaone1.sh  install_qwen.sh
